--- a/package.json
+++ b/package.json
@@ -10,23 +10,22 @@
   },
   "dependencies": {
     "@mistralai/mistralai": "^1.7.2",
-    "@supabase/supabase-js": "^2.50.0",
     "lucide-react": "^0.515.0",
-    "next": "^15.3.3",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "next": "14.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.10",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.3",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
     "postcss": "^8.5.5",
-    "tailwindcss": "^4.1.10",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
